--- a/web/index.html
+++ b/web/index.html
@@ -18,18 +18,18 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="SmartCare is an innovative Smart Medical Appointment Booking System designed to simplify and enhance the process of scheduling medical appointments. This mobile application, built with Flutter, offers a seamless experience for users to search for doctors, book appointments, and receive personalized recommendations through an AI-powered chatbot.">
+  <meta name="description" content="CurAi is an innovative Smart Medical Appointment Booking System designed to simplify and enhance the process of scheduling medical appointments. This mobile application, built with Flutter, offers a seamless experience for users to search for doctors, book appointments, and receive personalized recommendations through an AI-powered chatbot.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="smartcare_app_mobile">
+  <meta name="apple-mobile-web-app-title" content="curai_app_mobile">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>smartcare_app_mobile</title>
+  <title>curai_app_mobile</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
